# pylith_installer

./: .dockerignore  .gitignore  AUTHORS  CHANGES  CHANGES.md  COPYING  INSTALL  LICENSE.md  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  configure.ac  environment.am  notes.txt  numpy_blaslapack.cfg  packages.am
binary/: build_linux.sh  config_darwin.sh  config_linux.sh
cig/: Makefile.am
dependencies/: Makefile.am  numpy_noblaslapack.cfg  update_certificates.py
developer/: developer_helper.cfg  developer_helper.py  release-announcement.md
docker/: README  README-developer  README-developer.md  README.md  alpine  alpine-buildenv  alpine-install  binary-linux  binaryenv-linux  build.py  builder.py  centos-6  centos-7  centos-8  debian-baseenv  debian-binary  debian-buildenv  debian-data  debian-install  debian-stable  debian-stable-gcc8  debian-testing  debian-testing-clang8  debian-testing-clang9  debian-testing-gcc9  debian-userenv  fedora-30  fedora-31  fedora-32  fedora-33  fedora-34  fedora-35  fedora-36  fedora-37  fedora-38  fedora-39  fedora-40  pip.conf  pylith-binaryenv  pylith-devenv  (+18 more)
docker/endoflife/: centos-6  fedora-30  fedora-32  fedora-33  fedora-35  fedora-36  ubuntu-18.04  ubuntu-19.10
docs/: Makefile.am  README.md  _config.yml  conf.py  index.md  requirements.txt
docs/_data/: navbar.yml
docs/_includes/: footer.html  page-banner.html
docs/_sass/: layout.scss
docs/_templates/: sidebar-cig.html
docs/configs/: centos.md  clusters.md  debian.md  fedora.md  index.md  macos.md  ubuntu.md
docs/developer/: binary.md  ci-docker.md  creating-binaries.md  creating-devenv.md  docker-devenv.md  docker.md  index.md
docs/devenv/: configs.md  dev-helper.md  docker-devenv.md  index.md
docs/devenv/docker/: gmsh.md  index.md  quickref.md  run.md  setup.md  update.md
docs/install/: configure.md  download.md  environment.md  index.md  make.md  overview.md  troubleshooting.md  verify.md
docs/overview/: index.md  packages.md  requirements.md  use-cases.md
packager/: README-binary  README.md  build.py  make_package.py  make_petscdist.sh  package_dependencies.py  packinglist.cfg  pkgs-centos-6.9-amd64  pkgs-fedora-25-amd64  pkgs-ubuntu-12.04-amd64  setup_darwin.sh  setup_linux.sh  setup_macos.sh  update_darwinlinking.py
