# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2023 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	dependencies \
	cig

# ----------------------------------------------------------------------
# Files
# ----------------------------------------------------------------------
EXTRA_DIST = \
	AUTHORS \
	CHANGES.md \
	LICENSE.md \
	NEWS.md \
	README.md \
	configure.ac \
	docker/README \
	docker/README-developer \
	docker/builder.py \
	docker/centos-7 \
	docker/rockylinux-8 \
	docker/debian-stable \
	docker/debian-testing \
	docker/fedora-35 \
	docker/fedora-36 \
	docker/fedora-37 \
	docker/ubuntu-18.04 \
	docker/ubuntu-20.04 \
	docker/ubuntu-22.04 \
	docker/ubuntu-22.10 \
	packager/build.py \
	packager/setup_macos.sh \
	packager/setup_linux.sh \
	packager/build.py \
	packager/make_petscdist.sh


dist_noinst_SCRIPTS = \
	bin/fetch.sh \
	developer/developer_helper.py

# End of file
