# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://geodynamics.org).
#
# Copyright (c) 2010-2024, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	dependencies \
	cig

# ----------------------------------------------------------------------
# Files
# ----------------------------------------------------------------------
EXTRA_DIST = \
	AUTHORS \
	CHANGES.md \
	LICENSE.md \
	NEWS.md \
	README.md \
	configure.ac \
	docker/README.md \
	docker/builder.py \
	docker/rockylinux-8 \
	docker/rockylinux-9 \
	docker/debian-stable \
	docker/debian-testing \
	docker/fedora-39 \
	docker/fedora-40 \
	docker/ubuntu-20.04 \
	docker/ubuntu-22.04 \
	docker/ubuntu-24.04 \
	docker/ubuntu-24.10 \
	packager/build.py \
	packager/setup_macos.sh \
	packager/setup_linux.sh \
	packager/build.py \
	packager/make_petscdist.sh \
	packager/README.md


dist_noinst_SCRIPTS = \
	bin/fetch.sh \
	developer/developer_helper.py

# End of file
